# Algorithms_for_Optimization_cpp

./: ActiveSetSolver_8hpp_source.html  AdaDelta_8hpp_source.html  AdaGrad_8hpp_source.html  Adam_8hpp_source.html  AutoDiff_8hpp_source.html  BFGS_8hpp_source.html  BacktrackingLineSearch_8hpp_source.html  BlockBandedSolver_8hpp_source.html  BlockBandedStorage_8hpp_source.html  Bracketing_8hpp_source.html  CMA__ES_8hpp_source.html  CMakeLists.txt  ConjugateGradient_8hpp_source.html  CrossEntropy_8hpp_source.html  CyclicCoordinate_8hpp_source.html  DIRECT_8hpp_source.html  Doxyfile  Dual_8hpp_source.html  DynamicBicycleModel_8hpp_source.html  EKF_8hpp_source.html  EQPSolver_8hpp_source.html  GeneralizedPatternSearch_8hpp_source.html  GradientDescent_8hpp.html  GradientDescent_8hpp__incl.dot  GradientDescent_8hpp_source.html  HookeJeeves_8hpp.html  HookeJeeves_8hpp__incl.dot  HookeJeeves_8hpp_source.html  HyperGradientDescent_8hpp.html  HyperGradientDescent_8hpp__incl.dot  HyperGradientDescent_8hpp_source.html  IPMQPSolver_8hpp.html  IPMQPSolver_8hpp__dep__incl.dot  IPMQPSolver_8hpp__incl.dot  IPMQPSolver_8hpp_source.html  Integrator_8hpp_source.html  KKTMonitor_8hpp.html  KKTMonitor_8hpp__incl.dot  KKTMonitor_8hpp_source.html  LevenbergMarquardt_8hpp_source.html  (+441 more)
.github/workflows/: c-cpp.yml  docs.yml  format.yml
.mcp-docs/: 00_philosophy.md
.roo/: mcp.json
docs/: AdaGrad.md  Adam.md  AutoDiff.md  Backtracking_Line_Search.md  Conjugate_Gradient.md  Gradient_Descent.md  Momentum.md  Nestrov_Momentum.md  RMSProp.md  Strong_Backtracking_Line_Search.md  TrustRegion.md
docs/LineSearch/: Bisection.md  Bracket_Minimum.md  Bracket_Sign_Change.md  Golden_Section.md  Quadratic_Fit_Search.md  Shubert-Piyavskii_Method.md
docs/Matrix/: MatrixEngine.md
docs/Solver/: EQPSolver.md  SparseIPMQPSolver.md
include/Optimization/: ActiveSetSolver.hpp  AdaDelta.hpp  AdaGrad.hpp  Adam.hpp  AutoDiff.hpp  BFGS.hpp  BacktrackingLineSearch.hpp  BlockBandedSolver.hpp  Bracketing.hpp  CMA_ES.hpp  ConjugateGradient.hpp  CrossEntropy.hpp  CyclicCoordinate.hpp  DIRECT.hpp  Dual.hpp  EQPSolver.hpp  GeneralizedPatternSearch.hpp  GradientDescent.hpp  HookeJeeves.hpp  HyperGradientDescent.hpp  IPMQPSolver.hpp  KKTMonitor.hpp  LineSearch.hpp  MADS.hpp  Momentum.hpp  NaturalEvoluationStrategies.hpp  NelderMead.hpp  NestrovMomentum.hpp  NewtonMethod.hpp  NoisyDescent.hpp  PathPlanner.hpp  Powell.hpp  RMSProp.hpp  RTINMPC.hpp  RTISolver.hpp  SQPSolver.hpp  SecantMethod.hpp  SimulatedAnnealilng.hpp  SparseIPMQPSolver.hpp  StrongBacktrackingLineSearch.hpp  (+1 more)
include/Optimization/Control/: NMPC.hpp
include/Optimization/Controller/: MultipleShootingNMPC.hpp  SparseNMPC.hpp
include/Optimization/Estimator/: EKF.hpp
include/Optimization/Integrator/: RK4.hpp
include/Optimization/Matrix/: BlockBandedStorage.hpp  LinearAlgebra.hpp  LinearAlgebra_Cholesky.hpp  LinearAlgebra_Core.hpp  LinearAlgebra_LDLT.hpp  LinearAlgebra_LU.hpp  LinearAlgebra_NMPC.hpp  LinearAlgebra_QR.hpp  MathTraits.hpp  MatrixEngine.hpp  SparseMatrixEngine.hpp  StaticMatrix.hpp
include/Optimization/Physics/: VehicleModel.hpp
include/Optimization/Simulation/: Integrator.hpp
include/Optimization/Solver/: LevenbergMarquardt.hpp  NewtonSolver.hpp  QPSolver_IPM.hpp  RiccatiSolver.hpp  SQPSolver.hpp  SolverStatus.hpp
include/Optimization/Utils/: RigidTransform.hpp
include/Optimization/VehicleModel/: DynamicBicycleModel.hpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  classes_f.js  (+39 more)
test/: test_ActiveSet.cpp  test_EKF.cpp  test_EQP.cpp  test_IPM.cpp  test_Integrated_Pipeline.cpp  test_LevenbergMarquardt.cpp  test_MultipleShooting.cpp  test_NMPC.cpp  test_NewtonSolver.cpp  test_QPSolver_IPM.cpp  test_RTINMPC.cpp  test_Riccati.cpp  test_RiccatiSolver.cpp  test_SQP.cpp  test_SQPSolver.cpp  test_SparseMatrix.cpp  test_SparseNMPC.cpp  test_SparseNMPC_Battlefield.cpp  test_VehicleIntegrator.cpp  test_VehicleModel.cpp  test_adadelta.cpp  test_adagrad.cpp  test_adam.cpp  test_autodiff.cpp  test_backtracking.cpp  test_bfgs.cpp  test_bracketing.cpp  test_cma_es.cpp  test_conjugate_gradient.cpp  test_cross_entropy.cpp  test_cyclic_coordinate.cpp  test_direct.cpp  test_dual.cpp  test_generalized_pattern_search.cpp  test_gradient_descent.cpp  test_hooke_jeeves.cpp  test_hyper_gradient_descent.cpp  test_linesearch.cpp  test_mads.cpp  test_matrixengine.cpp  (+11 more)
